--- a/.terraformrc
+++ b/.terraformrc
@@ -1,4 +1,5 @@
 dev_overrides {
-      "elsudano/vmworkstation" = "C:\Users\Kiran\go\src\github.com\elsudano\terraform-provider-vmworkstation\terraform-provider-vmworkstation_v1.0.3.exe"
+      "Code-Mountains/vmworkstation" = 
+	  "C:\Users\Kiran\go\src\github.com\Code-Mountains\terraform-provider-vmworkstation\terraform-provider-vmworkstation_v1.0.3.exe"
 }
 direct {}
