--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,11 @@ jobs:
   goreleaser:
     runs-on: ["self-hosted","kiran","windows"]
     steps:
-      - name: Clone repository
-        run: git clone https://github.com/Code-Mountains/terraform-provider-vmworkstation.git .
-
-      # - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
-          # Allow goreleaser to access older tag information.
-          fetch-depth: 0
+          fetch-depth: 0 # Fetch all history for all tags and branches
+
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
         with:
           go-version-file: 'go.mod'
