--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ jobs:
   goreleaser:
     runs-on: ["self-hosted","kiran","windows"]
     steps:
+
+      - name: Setup Environment Variables
+        run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
+
       - name: Checkout repository
         uses: actions/checkout@v4
         # with:
