--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Setup Environment Variables
         run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
 
+      - name: Set Safe Directory
+        run: git config --global --add safe.directory C:/Users/Kiran/Documents/runner/
+
+
       - name: Checkout repository
         uses: actions/checkout@v4
         # with:
